--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <li><a href="#!">three</a></li>
 </ul>
 <nav class="red lighten-2" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="http://laravel-materialize.dev" class="brand-logo">Laravel - Materialize</a>
+  <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Laravel - Materialize</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="/cards">Cards</a></li>
       <li><a href="#!">Link 2</a></li>
