--- a/cards.html
+++ b/cards.html
@@ -175,7 +175,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-                    <script src="/js/all-fdfedde8.js"></script>
+                    <script src="js/all-fdfedde8.js"></script>
 
           <script>
   $(document).ready(function(){
