--- a/cards.html
+++ b/cards.html
@@ -31,15 +31,15 @@
   <li><a href="#!">three</a></li>
 </ul>
 <nav class="red lighten-2" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Laravel - Materialize</a>
+  <div class="nav-wrapper container"><a id="logo-container" href="http://blomdahldaniel.github.io/laravel-materialize/" class="brand-logo">Laravel - Materialize</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="/cards">Cards</a></li>
+      <li><a href="cards">Cards</a></li>
       <li><a href="#!">Link 2</a></li>
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
     <ul id="nav-mobile" class="side-nav">
-      <li><a href="/cards">Cards</a></li>
+      <li><a href="cards">Cards</a></li>
       <li><a href="#!">Link 2</a></li>
       <!-- Dropdown Trigger -->
       <li class="no-padding">
@@ -173,7 +173,7 @@
 </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
                     <script src="js/all-fdfedde8.js"></script>
 
